--- a/Gobot/Gobot/Content/Account.css
+++ b/Gobot/Gobot/Content/Account.css
@@ -94,6 +94,16 @@ img {
       color: #eeeeee;
       border-color: #eeeeee; }
 
+.info {
+  position: relative;
+  float: left;
+  clear: both;
+  width: 85%;
+  max-width: 1350px;
+  height: auto;
+  background-color: #232323;
+  margin: 2px auto; }
+
 @media screen and (max-width: 1200px) {
   #error_overlay > div {
     width: 75%;
@@ -148,53 +158,53 @@ h5 {
   font: 400 14px Lato, sans-serif;
   color: white; }
 
-.info {
-  position: relative;
+.info a {
+  padding: 0 25px; }
+
+.info a:not(.whiteLink) {
+  background-color: #202020; }
+
+.info a:not(.whiteLink):hover {
+  background-color: #1b1b1b; }
+  .info a:not(.whiteLink):hover > .grey {
+    color: #ffbf5c; }
+
+.info .whiteLink {
+  background-color: #eeeeee !important;
+  color: #232323 !important; }
+
+.info .whiteLink > h2 {
+  color: #232323; }
+
+.info .whiteLink:hover {
+  background-color: #ffbf5c !important; }
+
+.info b {
+  color: #5f5f5f !important;
+  font-weight: inherit; }
+
+.info > div {
   float: left;
-  clear: both;
-  width: 85%;
-  max-width: 1350px;
-  height: auto;
-  background-color: #232323;
-  margin: 2px auto; }
-  .info a {
-    padding: 0 25px; }
-  .info a:not(.whiteLink) {
-    background-color: #202020; }
-  .info a:not(.whiteLink):hover {
-    background-color: #1b1b1b; }
-    .info a:not(.whiteLink):hover > .grey {
-      color: #ffbf5c; }
-  .info .whiteLink {
-    background-color: #eeeeee !important;
-    color: #232323 !important; }
-  .info .whiteLink > h2 {
-    color: #232323; }
-  .info .whiteLink:hover {
-    background-color: #ffbf5c !important; }
-  .info b {
-    color: #5f5f5f !important;
-    font-weight: inherit; }
-  .info > div {
-    float: left;
-    position: relative;
-    top: 0;
-    left: 0;
-    height: 130px; }
-  .info > div:not(#userInfo) > a {
-    height: 100%;
-    top: 0;
-    left: 0; }
-  .info .info_logo {
-    float: left;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 130px;
-    background-position: center;
-    background-color: transparent;
-    background-repeat: no-repeat;
-    background-size: 62px; }
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 130px; }
+
+.info > div:not(#userInfo) > a {
+  height: 100%;
+  top: 0;
+  left: 0; }
+
+.info .info_logo {
+  float: left;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 130px;
+  background-position: center;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: 62px; }
 
 .info:last-of-type {
   margin-bottom: 25px; }
@@ -281,7 +291,7 @@ h5 {
   #options > div {
     width: 33.3%;
     padding: 50px 0 !important;
-    height: auto;
+    height: calc(100% - 100px);
     cursor: pointer; }
     #options > div > img {
       display: block;
@@ -298,6 +308,9 @@ h5 {
     background-color: #1f1f1f; }
     #options > div:hover > h2 {
       color: #eeeeee; }
+
+#changeImg > h2 {
+  top: 0 !important; }
 
 #options > form {
   height: 500px;
@@ -326,8 +339,8 @@ h5 {
     color: #626262;
     font: 400 30px Lato, Arial, sans-serif;
     text-transform: uppercase;
-    width: 40%;
-    margin: 0 30%;
+    width: 50%;
+    margin: 0 25%;
     background-color: transparent;
     border: 1px solid #626262;
     padding: 10px; }
