--- a/Gobot/Gobot/Views/Watch/Index.cshtml
+++ b/Gobot/Gobot/Views/Watch/Index.cshtml
@@ -1,11 +1,8 @@
 ﻿@model Gobot.Models.Match
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Regarder";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@Styles.Render("~/Content/Watch.min.css")
-
-<h2>Index</h2>
-
+@*@Styles.Render("~/Content/Watch.min.css")*@
