--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -161,11 +161,12 @@ img {
   #navBig > #compte {
     height: 98px; }
     #navBig > #compte > div > img {
-      position: relative;
+      position: absolute;
       width: 56px;
       height: 56px;
       top: 17px;
-      margin: 0 auto;
+      left: 13px !important;
+      margin: 0 auto !important;
       border-radius: 50%;
       border: 4px solid rgba(0, 0, 0, 0.3); }
   #navBig > a > div {
@@ -220,12 +221,13 @@ img {
       height: 100%;
       background-image: url(../Images/triangle.png);
       background-position: center; }
-  #navBig .active {
+  #navBig .active, #navBig .active_anim {
     left: -10px;
     background-color: #e3604c;
     border-right: 10px solid #a84739;
     border-top: 1px solid #cc5644;
-    border-bottom: 1px solid #cc5644;
+    border-bottom: 1px solid #cc5644; }
+  #navBig .active_anim {
     transition: left 0.1s linear; }
 
 .ink {
