--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -5,18 +5,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The description of my page" />
     <title>@ViewBag.Title - Gobotter</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,700,900,900italic,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
 
     @Styles.Render("~/Content/Menu.min.css")
     @Scripts.Render("~/bundles/modernizr")
-    <meta name="description" content="The description of my page" />
 </head>
 <body>
     <div id="navBig">
         <a id="compte" href="@Url.Action("Index", "Account")">
-            <div id="img"><img src="@Model.ProfilPic" /></div>
+            <div id="img"><img src="@(Session["User_img"])" /></div>
         </a>
         <a id="matchs" href="@Url.Action("Index", "Watch")">
             <div style="background-image: url(@Url.Content("~/Images/matches.png"))"></div>
@@ -24,75 +24,41 @@
         <a id="gagueure" href="@Url.Action("Index", "Bet")">
             <div style="background-image: url(@Url.Content("~/Images/bet.png"))"></div>
         </a>
-        <a id="équipes" href="@Url.Action("Index", "Teams")">
+        <a id="équipes" href="#">
             <div style="background-image: url(@Url.Content("~/Images/teams.png"))"></div>
         </a>
-        <a id="inventaire" href="@Url.Action("Index", "Inventory")">
+        <a id="inventaire" href="#">
             <div style="background-image: url(@Url.Content("~/Images/inventory.png"))"></div>
         </a>
-        <a id="magasin" href="@Url.Action("Index", "Shop")">
+        @*<a id="magasin" href="@Url.Action("Index", "Shop")">
             <div style="background-image: url(@Url.Content("~/Images/shop.png"))"></div>
-        </a>
+        </a>*@
 
-
-        @*<div id="textLinks">
-            <a href="@Url.Action("FAQ", "Support")">FAQ</a>
-            <a href="@Url.Action("Index", "Support")">Support</a>
-            <a href="@Url.Action("Contact", "Support")">Contact</a>
-        </div>*@
-
-        <a id="FAQ" class="small" href="@Url.Action("FAQ", "Support")">
+        <a id="FAQ" class="small" href="#">
             <div style="background-image: url(@Url.Content("~/Images/faq.png"))"></div>
         </a>
-        <a id="support" class="small" href="@Url.Action("Index", "Support")">
+        <a id="support" class="small" href="#">
             <div style="background-image: url(@Url.Content("~/Images/support.png"))"></div>
         </a>
-        <a id="contact" class="small" href="@Url.Action("Contact", "Support")">
+        <a id="contact" class="small" href="#">
             <div style="background-image: url(@Url.Content("~/Images/contact.png"))"></div>
         </a>
         <a id="déconnection" class="small" href="@Url.Action("Logout", "Account")">
             <div style="background-image: url(@Url.Content("~/Images/logout.png"))"></div>
         </a>
     </div>
-    @*<div id="navSmall">
-            <div class="row" id="second">
-                <div id="close"><img src="~/Images/close.png"/><span>Close Menu</span></div>
-            </div>
-            <div class="row" id="first">
-                <div class="box" id="bet"><img src="~/Images/bet.png"/><span>Bet</span></div>
-                <div class="box" id="matches"><img src="~/Images/matches.png" /><span>Matches</span></div>
-                <div class="box" id="shop"><img src="~/Images/shop.png" /><span>Shop</span></div>
-                <div class="box" id="menu"><img src="~/Images/inventory.png" /><span>Inventory</span></div>
-            </div>
-            <div class="row" id="third">
-                <div class="box" id="account"><img src="~/Images/account.png" /><span>Account</span></div>
-                <div class="box" id="team"><img src="~/Images/team.png" /><span>Teams</span></div>
-                <div class="box" id="faq"><img src="~/Images/faq.png" /><span>FAQ</span></div>
-                <div class="box" id="contact"><img src="~/Images/contact.png" /><span>Contact</span></div>
-            </div>
-        </div>*@
     @RenderBody()
 
     <script>
-        // ERROR!!!!!! ACCOUNT ON HOVER TEXT CHANGES POSITION DEPENDING ON POSITION OF HOVER
-
         var waterDropInterval;
         var mobileWidth = 959;
 
         $(document).ready(function () {
-
+            setCurrentTab();
         });
 
         $(window).on('resize', function () {
-            //if ($(window).width() > mobileWidth) {
-            //    $(".textLink > div").remove();
-            //}
-            //else {
-            //    if ($(".textLink > div").length == 0)
-            //        $(".textLink").prepend("<div></div>");
-            //}
 
-            //$(".ink").css("border-radius", $("#menu").width());
         });
 
         // Get cursor position on each mousemove.
@@ -122,8 +88,7 @@
 
                 $(this).parent().css({ backgroundColor: color }); // Change background-color
             }
-        });
-        $(document).on("mouseleave", "#navBig > a > div", function (e) {
+        }).on("mouseleave", "#navBig > a > div", function (e) {
             if (!$(this).parent().hasClass("active")) {
                 clearInterval(waterDropInterval); // Remove waterdrop
                 hideNavText($(this)); // Remove text
@@ -134,14 +99,28 @@
 
         // Active page
         $("#navBig > a > div").click(function () {
-            clearInterval(waterDropInterval); // Remove waterdrop
-            $("#navBig").stop(); // Stop animations of nav
-            $("#navBig").find(".active").removeClass("active");
-            $(this).parent().parent().find("a").css({ backgroundColor: "#f16651" });
-            $(this).parent().css({ backgroundColor: "#e3604c" });
-            $(this).parent().addClass("active");
-            hideNavText($(this)); // Hide text
+            setClickedTab($(this), true);
         });
+        function setCurrentTab() {
+            var url = window.location.pathname;
+            $("#navBig > a").each(function () {
+                if ($(this).attr("href") == url) {
+                    setClickedTab($(this).find("div"), false);
+                    return;
+                }
+            });
+        }
+        function setClickedTab(e, animate) {
+            if (e != null) {
+                clearInterval(waterDropInterval); // Remove waterdrop
+                $("#navBig").stop(); // Stop animations of nav
+                $("#navBig").find(".active").removeClass("active");
+                e.parent().parent().find("a").css({ backgroundColor: "#f16651" });
+                e.parent().css({ backgroundColor: "#e3604c" });
+                e.parent().addClass(animate ? "active_anim" : "active");
+                hideNavText(e); // Hide text
+            }
+        }
 
         function showNavText(elem) {
             if ($(window).width() > mobileWidth) {
@@ -160,14 +139,6 @@
         function hideNavText(elem) {
             if ($(window).width() > mobileWidth)
                 $("#navBig > #text").remove();
-        }
-
-        function toMobile() {
-
-        }
-
-        function toDesktop() {
-
         }
 
         function waterDrop(parent, e) {
@@ -193,27 +164,22 @@
             var pos = ($(window).width() - $("#navBig").width()) / 2 - elem.width() / 2;
             elem.css("left", pos);
         }
-
         function v_align_window(elem, parent) {
             var pos = $(window).height() / 2 - elem.height() / 2;
             elem.css("top", pos);
         }
-
         function v_align(e, p, eH) {
             var pos = p.height() / 2 - eH / 2;
             e.css("top", pos > 0 ? pos : 0);
         }
-
         function v_align_margin(e, p, eH) {
             var pos = p.height() / 2 - eH / 2;
             e.css("margin-top", pos > 0 ? pos : 0);
         }
-
         function h_align(e, p) {
             var pos = p.width() / 2 - e.width() / 2;
             e.css("left", pos > 0 ? pos : 0);
         }
-
         function h_align(e, p, eW) {
             var pos = p.width() / 2 - eW / 2;
             e.css("left", pos > 0 ? pos : 0);
